<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.aleksandarbroker.insurance.About"
    tools:showIn="@layout/about">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginRight="@dimen/text_margin"
            android:text="@string/text1"
            android:id="@+id/text1"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginRight="@dimen/text_margin"
            android:text="@string/text2"
            android:id="@+id/text2"
            android:layout_below="@id/text1"
            android:textColor="@color/background_floating_material_dark"
            android:textStyle="bold"
            android:textSize="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginRight="@dimen/text_margin"
            android:text="@string/text3"
            android:id="@+id/text3"
            android:layout_below="@id/text2"
            android:textColor="@color/black"
            android:textSize="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginRight="@dimen/text_margin"
            android:text="@string/text4"
            android:id="@+id/text4"
            android:layout_below="@id/text3"
            android:textColor="@color/background_floating_material_dark"
            android:textStyle="bold"
            android:textSize="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginRight="@dimen/text_margin"
            android:text="@string/text5"
            android:id="@+id/text5"
            android:layout_below="@id/text4"
            android:textColor="@color/black"
            android:textSize="15dp" />

    </RelativeLayout>

</android.support.v4.widget.NestedScrollView>
